
171116 Martin Mann :
 * configure.ac :
   + --enable-static-linking flag added to build statically linked binaries

171111 Martin Mann :
 * IntaRNA/PredictorMfe2dHeuristic :
   * init curCellEtotal = E_INF to ignore effects of low ED of single positions
     (already applied that way in PredictorMfe2dHeuristicSeed)

171110 Martin Mann :
 * CommandLineParsing :
   + qSet : parameter to define sequence subset to be considered for prediction
   + tSet : parameter to define sequence subset to be considered for prediction
     (thanks to Alex Gawronski)
 * IndexRange :
   + LAST_INDEX : placeholder for last available index
 * README.md :
   + --qSet/--tSet docu added
   * fixing easylogging lib use example

171019 Martin Mann :
 * configure.ac :
   + in debug mode, set ELPP_DEBUG_ERRORS compiler define
 * IntaRNA/general.h :
   - ELPP_* defines removed since set via configure or not needed
 * bin/CommandLineParsing :
   + argument "--default-log-file" to redirect log output to file (except ERROR)
   + logFileName : dummy variable for --default-log-file argument
 * README.md :
   + --default-log-file docu added
   + -v/--verbose docu added
 * bin/IntaRNA :
   + log-file handling
   + flushing log streams on exit

version 2.1.0

171010 Martin Mann :
 * README.md :
   + explicit seed description
 * AccessibilityVrna :
   * fillByConstraints() :
   * fillByRNAup() :
   * callbackForStorage() :
     * BUGFIX : only check for block-constraint for region ends (is allowed to
       contain a blocked subregion)

171009 Martin Mann :
 * tests/*BasePair_test :
   * explicit use of std::abs (should fix test error of github issue #91)
   * BUGFIX: test values wrong (were derived from rounded values)
     -> fixes github issue #91 (thanks to @sjannielefevre) 
 * AccessibilityBasePair :
   * constructor() :
     + RT sanity check to avoid division by zero
 * NussinovHandler :
   + printMatrix() : utility function for debug to see matrix content